ci: build bindings on JDK 11 and verify packaged JARs on Java 25
The Java API targets Java 11 bytecode via --release 11, so build and run
the JUnit suite on the minimum supported JDK instead of JDK 17. Extend the
clean-JRE package check to Temurin 25, the current LTS. JDK 24+ treats JNI
library loading as a restricted operation (JEP 472), so pass
--enable-native-access=ALL-UNNAMED there and document the requirement.

Verified on Linux x86-64 with a JDK 11 toolchain: C tests 3/3, JNI tests
11/11, packager tests 13/13, clean Temurin 11/17/21/25 smoke passed.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Signed-off-by: Lawrance <xinyu.luo@zilliz.com>